# meetingmuse

./: .claude.md  .env.example  .flake8  .gitignore  .pre-commit-config.yaml  .secrets.baseline  Makefile  README.md  demo.sh  pyproject.toml
.github/actions/python-poetry-setup/: action.yml
.github/workflows/: build.yml  ci-build.yml  ci-pipeline.yml  deploy.yml  lint-test.yml
docs/: PRD_Google_OAuth_Integration.md  design.md  websocket_phase2_integration_prd.md  websocket_prd.md
scripts/: chatbot.py  commit-with-precommit.sh  common.py  generate_graph.py  pre-commit-with-autostage.sh  run_chatbot.py  run_node_with_graph.py  test_websocket_client.py  websocket_client.py
src/: main.py
src/common/: http_client.py
src/common/config/: config.py
src/common/decorators/: __init__.py  log_decorator.py
src/common/logger/: logger.py
src/common/utils/: utils.py
src/meetingmuse/: __init__.py  graph.py  routing.py
src/meetingmuse/clients/: google_calendar.py  google_contacts.py
src/meetingmuse/config/: config.py
src/meetingmuse/docs/: state_progression.md
src/meetingmuse/graph/: graph.py  graph_message_processor.py  message_processor.py
src/meetingmuse/llm_models/: base.py  factory.py  hugging_face.py  openai.py
src/meetingmuse/models/: google_apis.py  graph.py  graph_response.py  interrupts.py  meeting.py  node.py  response.py  state.py
src/meetingmuse/nodes/: base_node.py  clarify_request_node.py  classify_intent_node.py  collecting_info_node.py  end_node.py  greeting_node.py  human_interrupt_retry_node.py  human_schedule_meeting_more_info_node.py  missing_meeting_details_node.py  process_request_node.py  prompt_missing_meeting_details_node.py  schedule_meeting_node.py
src/meetingmuse/prompts/: clarify_request_prompt.py  greeting_prompt.py  intent_classifier_prompt.py  missing_fields_prompt.py  reminder_collecting_info_prompt.py  schedule_meeting_collecting_info_prompt.py  schedule_meeting_prompt.py
src/meetingmuse/services/: __init__.py  base_schedule_service.py  intent_classifier.py  meeting_details_service.py  oauth_service.py  reminder_details_service.py  routing_service.py  token_storage.py
src/meetingmuse/utils/: __init__.py  logger.py  utils.py
src/meetingmuse_server/: connection_manager.py  constants.py  main.py  message_protocol.py  websocket_routes.py
src/server/: PHASE2_README.md  README.md  __init__.py  connection_manager.py  constants.py  dependency_container.py  main.py  message_protocol.py  websocket_routes.py
src/server/api/: __init__.py  admin_api.py  app.py  auth_api.py  dependencies.py  health_api.py  people_api.py  websocket_api.py  websocket_routes.py  ws_routes.py
src/server/handlers/: __init__.py  streaming_handler.py
src/server/langgraph/: __init__.py  langgraph_factory.py  message_processor.py  streaming_handler.py
src/server/models/: __init__.py  api_dtos.py  auth.py  connections.py  conversation.py  message_protocol.py  oauth.py  session.py  ws_dtos.py
src/server/services/: __init__.py  admin_api_handler.py  admin_service.py  connection_manager.py  conversation_manager.py  graceful_shutdown.py  health_api_handler.py  health_service.py  interrupt_ui_mapper.py  message_processor.py  oauth_service.py  server_lifecycle_manager.py  session_manager.py  socket_message_processor.py  token_storage.py  websocket_connection_service.py
src/server/storage/: __init__.py  memory_storage.py  redis_adapter.py  storage_adapter.py
tests/: run_node_with_graph.py
tests/common/utils/: test_utils.py
tests/meetingmuse/: conftest.py
tests/meetingmuse/clients/: __init__.py  (+2 more)
tests/scripts/: generate_graph.py  run_chatbot.py  run_node_with_graph.py
tests/server/: conftest.py
tests/websocket/: test_connection_manager.py  test_conversation_manager.py  test_integration.py  test_langgraph_factory.py  test_message_processor.py  test_message_protocol.py  test_streaming_handler.py
(+31 files in other folders)
