[project]
name = "meetingmuse"
version = "0.1.0"
description = ""
authors = [
    {name = "thisisasl",email = "arjunslife@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "langgraph (>=0.5.1,<0.6.0)",
    "langsmith (>=0.4.4,<0.5.0)",
    "langchain-ollama (>=0.3.3,<0.4.0)",
    "ipython (>=9.4.0,<10.0.0)",
    "graphviz (>=0.20.0,<1.0.0)",
    "pydot (>=2.0.0,<3.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
